--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest-serializer-vue": "^0.3.0",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
+    "mockjs": "^1.0.1-beta3",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
